force-app/main/default/objects/PricebookEntry/fields/EOLID_PRODUCTS__c.field-meta.xml
<CustomField>
    <fullName>EOLID_PRODUCTS__c</fullName>
    <externalId>true</externalId>
    <label>EOLID (PRODUCTS)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>