force-app/main/default/objects/PricebookEntry/fields/Product_EOL_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_EOL_ID__c</fullName>
    <formula>Product2.EOL_ID_PRODUCTS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product EOL ID</label>
    <type>Text</type>
</CustomField>